configs/cockroachdb-cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-cockroachdb
