configs/dashboard-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-dashboard-external
spec:
  rules:
    - host: '*'
      http:
        paths:
          - path: /ceph-dashboard
            backend:
              serviceName: rook-ceph-mgr-dashboard
              servicePort: 8443
